# python-nbconf

./: .gitignore  README.md  first.nbsh  pyproject.toml
docs/: index.md  json_conf.md  usage.md
docs/api/: index.md  main_runtime_spec.md  mod_runtime_spec.md
docs/bugs/: bug1.nsh  index.md
nbconf/: __init__.py  __main__.py
nbconf/core/: __init__.py  conf.py  language.py  modimport.py  mutate.py  runtime.py
nbconf/lib/: __init__.py  api.py  conf.py  fs.py  imp.py  io.py  locale.py  structs.py  utils.py
nbconf/locale/: c.po
nbconf/mods/: core.py  debugtools.py  fs.py  io.py
nbconf/mods/lang/: c.po
nbconf/utils/: __init__.py  structs.py
